update dcn enumerations.

--- a/_includes/sidelist-parameters/parameters-enumerations.html
+++ b/_includes/sidelist-parameters/parameters-enumerations.html
@@ -1,5 +1,9 @@
 <li><a href="{{ site.enumerations }}" class="otherLinkColour">Enumerations</a>
-    <!-- <ul>
-        
-    </ul> -->
+    <ul>
+        <li><a href="{{ site.enumerations }}content-boundary-localization-mode.html" class="otherLinkColour">ContentBoundaryLocalizationMode</a></li>
+        <li><a href="{{ site.enumerations }}content-type.html" class="otherLinkColour">ContentType</a></li>
+        <li><a href="{{ site.enumerations }}execute-phase.html" class="otherLinkColour">ExecutePhase</a></li>
+        <li><a href="{{ site.enumerations }}image-colour-mode.html" class="otherLinkColour">ImageColourMode</a></li>
+        <li><a href="{{ site.enumerations }}quadrilateral-detection-mode.html" class="otherLinkColour">QuadrilateralDetectionMode</a></li>
+    </ul>
 </li>
