update tree files.

--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -1,5 +1,11 @@
 <li><a href="{{ site.c }}" class="otherLinkColour">C Language</a>
-    <!-- <ul>
-        
-    </ul> -->
+    <ul>
+        <li><a href="{{ site.cpp }}api-referenc/" class="otherLinkColour">API Reference</a>
+            <ul>
+                <li><a href="{{ site.c }}api-reference/primary-api/" class="otherLinkColour">Primary API</a></li>
+                <li><a href="{{ site.c_cpp_struct }}?src=c" class="otherLinkColour">Structs</a></li>
+                <li><a href="{{ site.enumerations }}?src=c" class="otherLinkColour">Enumerations</a></li>
+            </ul>
+        </li>
+    </ul>
 </li>
