--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -1,5 +1,11 @@
 <li><a href="{{ site.cpp }}" class="otherLinkColour">C++</a>
-    <!-- <ul>
-        
-    </ul> -->
+    <ul>
+        <li><a href="{{ site.cpp }}api-referenc/" class="otherLinkColour">API Reference</a>
+            <ul>
+                <li><a href="{{ site.cpp }}api-reference/primary-api/" class="otherLinkColour">Class ContentNormalizer</a></li>
+                <li><a href="{{ site.c_cpp_struct }}?src=cpp" class="otherLinkColour">Structs</a></li>
+                <li><a href="{{ site.enumerations }}?src=cpp" class="otherLinkColour">Enumerations</a></li>
+            </ul>
+        </li>
+    </ul>
 </li>
