--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -1,6 +1,6 @@
 <li><a href="{{ site.cpp }}" class="otherLinkColour">C++</a>
     <ul>
-        <li><a href="{{ site.cpp }}api-referenc/" class="otherLinkColour">API Reference</a>
+        <li><a href="{{ site.cpp }}api-reference/" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.cpp }}api-reference/primary-api/" class="otherLinkColour">Class ContentNormalizer</a></li>
                 <li><a href="{{ site.c_cpp_struct }}?src=cpp" class="otherLinkColour">Structs</a></li>
