--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -1,6 +1,6 @@
 <li><a href="{{ site.c }}" class="otherLinkColour">C Language</a>
     <ul>
-        <li><a href="{{ site.cpp }}api-reference/" class="otherLinkColour">API Reference</a>
+        <li><a href="{{ site.c }}api-reference/" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.c }}api-reference/primary-api/" class="otherLinkColour">Primary API</a></li>
                 <li><a href="{{ site.c_cpp_struct }}?src=c" class="otherLinkColour">Structs</a></li>
