update parameter reference tree nodes.

--- a/_includes/sidelist-parameters/parameters-reference.html
+++ b/_includes/sidelist-parameters/parameters-reference.html
@@ -1,5 +1,14 @@
 <li><a href="{{ site.parameter_reference }}" class="otherLinkColour">Reference</a>
-    <!-- <ul>
-        
-    </ul> -->
+    <ul>
+        <li><a href="{{ site.parameter_reference }}content-normalizer-parameter/" class="otherLinkColour">ContentNormalizerParameter Object</a>
+            <ul>
+                <li><a href="{{ site.parameter_reference }}content-normalizer-parameter/" class="otherLinkColour">ContentNormalizerParameter Object</a></li>
+            </ul>
+        </li>
+        <li><a href="{{ site.parameter_reference }}normalization-definition/" class="otherLinkColour">NormalizationDefinition Object</a>
+            <ul>
+
+            </ul>
+        </li>
+    </ul>
 </li>
