--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -3,7 +3,17 @@
         <li><a href="{{ site.c }}api-reference/" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.c }}api-reference/primary-api/" class="otherLinkColour">Primary API</a></li>
-                <li><a href="{{ site.c_cpp_struct }}?src=c" class="otherLinkColour">Structs</a></li>
+                <li><a href="{{ site.c_cpp_struct }}?src=c" class="otherLinkColour">Structs</a>
+                    <ul>
+                        <li><a href="{{ site.c_cpp_struct }}dcn-further-modes.html?src=c" class="otherLinkColour">DCN_FurtherModes</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}dcn-normalization-settings.html?src=c" class="otherLinkColour">DCN_NormalizationSettings</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}dcn-result.html?src=c" class="otherLinkColour">DCN_Result</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}dcn-runtime-settings.html?src=c" class="otherLinkColour">DCN_RuntimeSettings</a></li>
+                        <li><a href="{{ site.c_cpp_common_struct }}dm-point.html?src=c" class="otherLinkColour">DM_Point</a></li>
+                        <li><a href="{{ site.c_cpp_common_struct }}imagedata.html?src=c" class="otherLinkColour">ImageData</a></li>
+                        <li><a href="{{ site.c_cpp_common_struct }}quadrilateral.html?src=c" class="otherLinkColour">Quadrilateral</a></li>
+                    </ul>
+                </li>
                 <li><a href="{{ site.enumerations }}?src=c" class="otherLinkColour">Enumerations</a></li>
             </ul>
         </li>
