--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -10,7 +10,7 @@
                         <li><a href="{{ site.c_cpp_struct }}dcn-result.html?src=cpp" class="otherLinkColour">DCN_Result</a></li>
                         <li><a href="{{ site.c_cpp_struct }}dcn-runtime-settings.html?src=cpp" class="otherLinkColour">DCN_RuntimeSettings</a></li>
                         <li><a href="{{ site.c_cpp_common_struct }}dm-point.html?src=cpp" class="otherLinkColour">DM_Point</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}imagedata.html?src=cpp" class="otherLinkColour">ImageData</a></li>
+                        <li><a href="{{ site.c_cpp_common_struct }}image-data.html?src=cpp" class="otherLinkColour">ImageData</a></li>
                         <li><a href="{{ site.c_cpp_common_struct }}quadrilateral.html?src=cpp" class="otherLinkColour">Quadrilateral</a></li>
                     </ul>
                 </li>
