--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -2,13 +2,13 @@
     <ul>
         <li><a href="{{ site.cpp }}api-reference/" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a href="{{ site.cpp }}api-reference/primary-api/" class="otherLinkColour">Class ContentNormalizer</a></li>
+                <li><a href="{{ site.cpp }}api-reference/primary-api/" class="otherLinkColour">Class DocumentNormalizer</a></li>
                 <li><a href="{{ site.c_cpp_struct }}?src=cpp" class="otherLinkColour">Structs</a>
                     <ul>
-                        <li><a href="{{ site.c_cpp_struct }}dcn-further-modes.html?src=cpp" class="otherLinkColour">DCN_FurtherModes</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}dcn-normalization-settings.html?src=cpp" class="otherLinkColour">DCN_NormalizationSettings</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}dcn-result.html?src=cpp" class="otherLinkColour">DCN_Result</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}dcn-runtime-settings.html?src=cpp" class="otherLinkColour">DCN_RuntimeSettings</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}ddn-further-modes.html?src=cpp" class="otherLinkColour">DDN_FurtherModes</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}ddn-normalization-settings.html?src=cpp" class="otherLinkColour">DDN_NormalizationSettings</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}ddn-result.html?src=cpp" class="otherLinkColour">DDN_Result</a></li>
+                        <li><a href="{{ site.c_cpp_struct }}ddn-runtime-settings.html?src=cpp" class="otherLinkColour">DDN_RuntimeSettings</a></li>
                         <li><a href="{{ site.c_cpp_common_struct }}dm-point.html?src=cpp" class="otherLinkColour">DM_Point</a></li>
                         <li><a href="{{ site.c_cpp_common_struct }}image-data.html?src=cpp" class="otherLinkColour">ImageData</a></li>
                         <li><a href="{{ site.c_cpp_common_struct }}quadrilateral.html?src=cpp" class="otherLinkColour">Quadrilateral</a></li>
