update parameter and c++ apis

--- a/_includes/sidelist-parameters/parameters-reference.html
+++ b/_includes/sidelist-parameters/parameters-reference.html
@@ -1,41 +1,23 @@
-<li><a href="{{ site.parameter_reference }}" class="otherLinkColour">Reference</a>
+<li><a href="{{ site.parameter_reference }}" class="otherLinkColour">Parameter Reference</a>
     <ul>
-        <li><a style="cursor:pointer;color:#3c3c3c">Single Parameter Dimension</a>
-            <ul>
-                <li><a href="{{ site.parameter_reference }}binarization-modes.html" class="otherLinkColour">BinarizationModes</a></li>
-                <li><a href="{{ site.parameter_reference }}brightness.html" class="otherLinkColour">Brightness</a></li>
-                <li><a href="{{ site.parameter_reference }}colour-conversion-modes.html" class="otherLinkColour">ColourConversionModes</a></li>
-                <li><a href="{{ site.parameter_reference }}colour-mode.html" class="otherLinkColour">ColourMode</a></li>
-                <li><a href="{{ site.parameter_reference }}contrast.html" class="otherLinkColour">Contrast</a></li>
-                <li><a href="{{ site.parameter_reference }}enable-deskewing.html" class="otherLinkColour">EnableDeskewing</a></li>
-                <li><a href="{{ site.parameter_reference }}enable-perspective-correction.html" class="otherLinkColour">EnablePerspectiveCorrection</a></li>
-                <li><a href="{{ site.parameter_reference }}execute-phases.html" class="otherLinkColour">ExecutePhases</a></li>
-                <li><a href="{{ site.parameter_reference }}grayscale-enhancement-modes.html" class="otherLinkColour">GrayscaleEnhancementModes</a></li>
-                <li><a href="{{ site.parameter_reference }}grayscale-transformation-modes.html" class="otherLinkColour">GrayscaleTransformationModes</a></li>
-                <li><a href="{{ site.parameter_reference }}interior-angle-range.html" class="otherLinkColour">InteriorAngleRange</a></li>
-                <li><a href="{{ site.parameter_reference }}max-thread-count.html" class="otherLinkColour">MaxThreadCount</a></li>
-                <li><a href="{{ site.parameter_reference }}minimal-horizontal-side-length.html" class="otherLinkColour">MinimalHorizontalSideLength</a></li>
-                <li><a href="{{ site.parameter_reference }}minimal-vertical-side-length.html" class="otherLinkColour">MinimalVerticalSideLength</a></li>
-                <li><a href="{{ site.parameter_reference }}quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
-                <li><a href="{{ site.parameter_reference }}scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
-                <li><a href="{{ site.parameter_reference }}target-content-page-size.html" class="otherLinkColour">TargetContentPageSize</a></li>
-                <li><a href="{{ site.parameter_reference }}texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
-                <li><a href="{{ site.parameter_reference }}timeout.html" class="otherLinkColour">Timeout</a></li>
-            </ul>
-        </li>
-        <li><a style="cursor:pointer;color:#3c3c3c">JSON Object Dimension</a>
-            <ul>
-                <li><a href="{{ site.parameter_reference }}document-normalizer-parameter/" class="otherLinkColour">DocumentNormalizerParameter Object</a>
-                    <!-- <ul>
-                        
-                    </ul> -->
-                </li>
-                <li><a href="{{ site.parameter_reference }}normalization-definition/" class="otherLinkColour">NormalizationDefinition Object</a>
-                    <!-- <ul>
-        
-                    </ul> -->
-                </li>
-            </ul>
-        </li>
+        <li><a href="{{ site.parameter_reference }}binarization-modes.html" class="otherLinkColour">BinarizationModes</a></li>
+        <li><a href="{{ site.parameter_reference }}brightness.html" class="otherLinkColour">Brightness</a></li>
+        <li><a href="{{ site.parameter_reference }}colour-channel-usage-type.html" class="otherLinkColour">ColourChannelUsageType</a></li>
+        <li><a href="{{ site.parameter_reference }}colour-conversion-modes.html" class="otherLinkColour">ColourConversionModes</a></li>
+        <li><a href="{{ site.parameter_reference }}colour-mode.html" class="otherLinkColour">ColourMode</a></li>
+        <li><a href="{{ site.parameter_reference }}content-type.html" class="otherLinkColour">ContentType</a></li>
+        <li><a href="{{ site.parameter_reference }}contrast.html" class="otherLinkColour">Contrast</a></li>
+        <li><a href="{{ site.parameter_reference }}deskew-mode.html" class="otherLinkColour">DeskewMode</a></li>
+        <li><a href="{{ site.parameter_reference }}grayscale-enhancement-modes.html" class="otherLinkColour">GrayscaleEnhancementModes</a></li>
+        <li><a href="{{ site.parameter_reference }}grayscale-transformation-modes.html" class="otherLinkColour">GrayscaleTransformationModes</a></li>
+        <li><a href="{{ site.parameter_reference }}interior-angle-range-array.html" class="otherLinkColour">InteriorAngleRangeArray</a></li>
+        <li><a href="{{ site.parameter_reference }}line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
+        <li><a href="{{ site.parameter_reference }}max-thread-count.html" class="otherLinkColour">MaxThreadCount</a></li>
+        <li><a href="{{ site.parameter_reference }}page-size.html" class="otherLinkColour">PageSize</a></li>
+        <li><a href="{{ site.parameter_reference }}quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
+        <li><a href="{{ site.parameter_reference }}scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
+        <li><a href="{{ site.parameter_reference }}text-filter-modes.html" class="otherLinkColour">TextFilterModes</a></li>
+        <li><a href="{{ site.parameter_reference }}texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
+        <li><a href="{{ site.parameter_reference }}timeout.html" class="otherLinkColour">Timeout</a></li>
     </ul>
 </li>
