--- a/_includes/sidelist-parameters/parameters-enumerations.html
+++ b/_includes/sidelist-parameters/parameters-enumerations.html
@@ -1,15 +1,17 @@
-<li><a href="{{ site.enumerations }}" class="otherLinkColour">Enumerations</a>
+<li><a href="{{ site.enumerations }}" class="otherLinkColour">Enumeration Reference</a>
     <ul>
-        <li><a href="{{ site.common_enumerations }}binarization-mode.html" class="otherLinkColour">BinarizationMode</a></li>
-        <li><a href="{{ site.common_enumerations }}colour-conversion-mode.html" class="otherLinkColour">ColourConversionMode</a></li>
-        <li><a href="{{ site.enumerations }}content-boundary-localization-mode.html" class="otherLinkColour">ContentBoundaryLocalizationMode</a></li>
+        <li><a href="{{ site.enumerations }}binarization-mode.html" class="otherLinkColour">BinarizationMode</a></li>
+        <li><a href="{{ site.enumerations }}colour-conversion-mode.html" class="otherLinkColour">ColourConversionMode</a></li>
         <li><a href="{{ site.enumerations }}content-type.html" class="otherLinkColour">ContentType</a></li>
-        <li><a href="{{ site.enumerations }}execute-phase.html" class="otherLinkColour">ExecutePhase</a></li>
-        <li><a href="{{ site.common_enumerations }}grayscale-enhancement-mode.html" class="otherLinkColour">GrayscaleEnhancementMode</a></li>
-        <li><a href="{{ site.common_enumerations }}grayscale-transformation-mode.html" class="otherLinkColour">GrayscaleTransformationMode</a></li>
+        <li><a href="{{ site.enumerations }}deskew-mode.html" class="otherLinkColour">DeskewMode</a></li>
+        <li><a href="{{ site.enumerations }}grayscale-enhancement-mode.html" class="otherLinkColour">GrayscaleEnhancementMode</a></li>
+        <li><a href="{{ site.enumerations }}grayscale-transformation-mode.html" class="otherLinkColour">GrayscaleTransformationMode</a></li>
         <li><a href="{{ site.enumerations }}image-colour-mode.html" class="otherLinkColour">ImageColourMode</a></li>
-        <li><a href="{{ site.common_enumerations }}image-pixel-format.html" class="otherLinkColour">ImagePixelFormat</a></li>
+        <li><a href="{{ site.enumerations }}image-pixel-format.html" class="otherLinkColour">ImagePixelFormat</a></li>
+        <li><a href="{{ site.enumerations }}line-extraction-mode.html" class="otherLinkColour">LineExtractionMode</a></li>
         <li><a href="{{ site.enumerations }}quadrilateral-detection-mode.html" class="otherLinkColour">QuadrilateralDetectionMode</a></li>
-        <li><a href="{{ site.common_enumerations }}texture-detection-mode.html" class="otherLinkColour">TextureDetectionMode</a></li>
+        <li><a href="{{ site.enumerations }}region-predetection-mode.html" class="otherLinkColour">RegionPredetectionMode</a></li>
+        <li><a href="{{ site.enumerations }}text-filter-mode.html" class="otherLinkColour">TextFilterMode</a></li>
+        <li><a href="{{ site.enumerations }}texture-detection-mode.html" class="otherLinkColour">TextureDetectionMode</a></li>
     </ul>
 </li>
