--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -1,21 +1,35 @@
 <li><a href="{{ site.cpp }}" class="otherLinkColour">C++</a>
     <ul>
-        <li><a href="{{ site.cpp }}api-reference/" class="otherLinkColour">API Reference</a>
+        <li><a href="{{ site.cpp_api }}" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a href="{{ site.cpp }}api-reference/primary-api/" class="otherLinkColour">Class DocumentNormalizer</a></li>
-                <li><a href="{{ site.c_cpp_struct }}?src=cpp" class="otherLinkColour">Structs</a>
+                <li><a href="{{ site.cpp_api }}document-normalizer-index.html" class="otherLinkColour">Class CDocumentNormalizer</a>
                     <ul>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-further-modes.html?src=cpp" class="otherLinkColour">DDN_FurtherModes</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-normalization-settings.html?src=cpp" class="otherLinkColour">DDN_NormalizationSettings</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-result.html?src=cpp" class="otherLinkColour">DDN_Result</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-runtime-settings.html?src=cpp" class="otherLinkColour">DDN_RuntimeSettings</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}dm-point.html?src=cpp" class="otherLinkColour">DM_Point</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}image-data.html?src=cpp" class="otherLinkColour">ImageData</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}quadrilateral.html?src=cpp" class="otherLinkColour">Quadrilateral</a></li>
+                        <li><a href="{{ site.cpp_api }}document-normalizer-init.html" class="otherLinkColour">Constructor and Destructor</a></li>
+                        <li><a href="{{ site.cpp_api }}document-normalizer-general.html" class="otherLinkColour">General Methods</a></li>
+                        <li><a href="{{ site.cpp_api }}document-normalizer-settings.html" class="otherLinkColour">Setting Methods</a></li>
+                        <li><a href="{{ site.cpp_api }}document-normalizer-normalizing.html" class="otherLinkColour">Detecting and Normalizing Methods</a></li>
+                        <li><a href="{{ site.cpp_api }}document-normalizer-result.html" class="otherLinkColour">Result Methods</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.enumerations }}?src=cpp" class="otherLinkColour">Enumerations</a></li>
+                <li><a>Auxiliary Classes</a>
+                    <ul>
+                        <li><a href="{{ site.cpp_api }}detected-quad-result.html" class="otherLinkColour">CDetectedQuadResult</a></li>
+                        <li><a href="{{ site.cpp_api }}detected-quad-result-array.html" class="otherLinkColour">CDetectedQuadResultArray</a></li>
+                        <li><a href="{{ site.cpp_api }}image-data.html" class="otherLinkColour">CImageData</a></li>
+                        <li><a href="{{ site.cpp_api }}license-manager.html" class="otherLinkColour">CLicenseManager</a></li>
+                        <li><a href="{{ site.cpp_api }}normalized-image-result.html" class="otherLinkColour">CNormalizedImageResult</a></li>
+                        <li><a href="{{ site.cpp_api }}point.html" class="otherLinkColour">CPoint</a></li>
+                        <li><a href="{{ site.cpp_api }}quadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
+                    </ul>
+                </li>
+                <li><a href="{{ site.enumerations }}" class="otherLinkColour">Enumerations</a></li>
             </ul>
         </li>
+        <li><a href="{{ site.cpp_release_notes }}" class="otherLinkColour">Release Notes</a>
+            <ul>
+                <li><a href="{{ site.cpp_release_notes }}cpp-1.html" class="otherLinkColour">Version 1.x</a></li>
+            </ul>
+        </li>
+
     </ul>
 </li>
