--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -3,7 +3,7 @@
 
 {%- include head.html -%}
 
-<body>
+<body class="noSubMenuDoc">
     <div class="headWrapper">
         {%- include page_header.html -%}
     </div>
