--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -3,6 +3,13 @@
 
 {%- include head.html -%}
 
+<style>
+#docHead { top: 95px }
+.docContainer, .sideBar { padding-top: 0px; }
+#sideBarCnt.sidebar-fixed { position: fixed; top: 0px; max-height: unset; }
+.rightSideMenu.rsm-fixed { position: fixed; top: 20px; }
+</style>
+    
 <body class="noSubMenuDoc">
     <div class="headWrapper">
         {%- include page_header.html -%}
