--- a/_includes/sidelist-parameters.html
+++ b/_includes/sidelist-parameters.html
@@ -1,5 +1,6 @@
 <li><a href="{{ site.parameters }}" class="otherLinkColour">Parameters</a>
     <ul>
+        <li><a href="{{ site.parameters }}parameter-organization-structure.html" class="otherLinkColour">Parameter Organization Structure</a></li>
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameters/parameters-reference.html" -%}
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameters/parameters-enumerations.html" -%}
     </ul>
