--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -1,17 +1,24 @@
 <li><a href="{{ site.c }}" class="otherLinkColour">C Language</a>
     <ul>
-        <li><a href="{{ site.c }}api-reference/" class="otherLinkColour">API Reference</a>
+        <li><a href="{{ site.c_api }}" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a href="{{ site.c }}api-reference/primary-api/" class="otherLinkColour">Primary API</a></li>
-                <li><a href="{{ site.c_cpp_struct }}?src=c" class="otherLinkColour">Structs</a>
+                <li><a>Global Functions</a>
                     <ul>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-further-modes.html?src=c" class="otherLinkColour">DDN_FurtherModes</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-normalization-settings.html?src=c" class="otherLinkColour">DDN_NormalizationSettings</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-result.html?src=c" class="otherLinkColour">DDN_Result</a></li>
-                        <li><a href="{{ site.c_cpp_struct }}ddn-runtime-settings.html?src=c" class="otherLinkColour">DDN_RuntimeSettings</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}dm-point.html?src=c" class="otherLinkColour">DM_Point</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}image-data.html?src=c" class="otherLinkColour">ImageData</a></li>
-                        <li><a href="{{ site.c_cpp_common_struct }}quadrilateral.html?src=c" class="otherLinkColour">Quadrilateral</a></li>
+                        <li><a href="{{ site.c_api }}document-normalizer-init.html" class="otherLinkColour">Initialize and Destroy Functions</a></li>
+                        <li><a href="{{ site.c_api }}document-normalizer-general.html" class="otherLinkColour">General Methods</a></li>
+                        <li><a href="{{ site.c_api }}document-normalizer-settings.html" class="otherLinkColour">Setting Methods</a></li>
+                        <li><a href="{{ site.c_api }}document-normalizer-normalizing.html" class="otherLinkColour">Detecting and Normalizing Methods</a></li>
+                        <li><a href="{{ site.c_api }}document-normalizer-result.html" class="otherLinkColour">Result Methods</a></li>
+                    </ul>
+                </li>
+                <li><a>Structs</a>
+                    <ul>
+                        <li><a href="{{ site.c_api }}detected-quad-result.html" class="otherLinkColour">DetectedQuadResult</a></li>
+                        <li><a href="{{ site.c_api }}detected-quad-result-array.html" class="otherLinkColour">DetectedQuadResultArray</a></li>
+                        <li><a href="{{ site.c_api }}image-data.html" class="otherLinkColour">ImageData</a></li>
+                        <li><a href="{{ site.c_api }}normalized-image-result.html" class="otherLinkColour">NormalizedImageResult</a></li>
+                        <li><a href="{{ site.c_api }}point.html" class="otherLinkColour">DM_Point</a></li>
+                        <li><a href="{{ site.c_api }}quadrilateral.html" class="otherLinkColour">Quadrilateral</a></li>
                     </ul>
                 </li>
                 <li><a href="{{ site.enumerations }}?src=c" class="otherLinkColour">Enumerations</a></li>
