fix link and remove none use enums

--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -22,7 +22,7 @@
                         <li><a href="{{ site.cpp_api }}quadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.enumerations }}" class="otherLinkColour">Enumerations</a></li>
+                <li><a href="{{ site.enumerations }}?src=cpp" class="otherLinkColour">Enumerations</a></li>
             </ul>
         </li>
         <li><a href="{{ site.cpp_release_notes }}" class="otherLinkColour">Release Notes</a>
