--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -1,5 +1,6 @@
 <li><a href="{{ site.c }}" class="otherLinkColour">C Language</a>
     <ul>
+        <li><a href="{{ site.c }}user-guide/getting-started.html" class="otherLinkColour">User Guide</a></li>
         <li><a href="{{ site.c_api }}" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a>Global Functions</a>
@@ -22,6 +23,11 @@
                     </ul>
                 </li>
                 <li><a href="{{ site.enumerations }}?src=c" class="otherLinkColour">Enumerations</a></li>
+            </ul>
+        </li>
+        <li><a href="{{ site.c_release_notes }}" class="otherLinkColour">Release Notes</a>
+            <ul>
+                <li><a href="{{ site.c_release_notes }}c-1.html" class="otherLinkColour">Version 1.x</a></li>
             </ul>
         </li>
     </ul>
