--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -1,5 +1,6 @@
 <li><a href="{{ site.cpp }}" class="otherLinkColour">C++</a>
     <ul>
+        <li><a href="{{ site.cpp }}user-guide/getting-started.html" class="otherLinkColour">User Guide</a></li>
         <li><a href="{{ site.cpp_api }}" class="otherLinkColour">API Reference</a>
             <ul>
                 <li><a href="{{ site.cpp_api }}document-normalizer-index.html" class="otherLinkColour">Class CDocumentNormalizer</a>
@@ -30,6 +31,5 @@
                 <li><a href="{{ site.cpp_release_notes }}cpp-1.html" class="otherLinkColour">Version 1.x</a></li>
             </ul>
         </li>
-
     </ul>
 </li>
