--- a/_includes/sidelist-introduction.html
+++ b/_includes/sidelist-introduction.html
@@ -1,5 +1,2 @@
-<li><a href="{{ site.introduction }}" class="otherLinkColour">introduction</a>
-    <ul>
-        <li><a href="{{ site.introduction }}overview/" class="otherLinkColour">Overview</a></li>
-    </ul>
+<li><a href="{{ site.introduction }}overview/" class="otherLinkColour">Introduction</a>
 </li>
