--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -14,6 +14,7 @@
     <div class="headWrapper">
         {%- include page_header.html -%}
     </div>
+    {%- include ddnNav.html -%}
     <div class="sideBarIcon"><i class="fa fa-list" style="margin-right: 5px;"></i> Table of contents</div>
     <div class="container">
         <div class="row">
