--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -3,14 +3,7 @@
 
 {%- include head.html -%}
 
-<style>
-#docHead { top: 95px }
-.docContainer, .sideBar { padding-top: 0px; }
-#sideBarCnt.sidebar-fixed { position: fixed; top: 0px; max-height: unset; }
-.rightSideMenu.rsm-fixed { position: fixed; top: 20px; }
-</style>
-    
-<body class="noSubMenuDoc">
+<body>
     <div class="headWrapper">
         {%- include page_header.html -%}
     </div>
