--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -26,14 +26,14 @@
                         </li>
                         <li class="item overview">
                             <!---->
-                            <a class="textUpperCase" href="{{site.frontPageFolder}}release-notes.html">Release Notes</a>
+                            <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
                         </li>
                         <li class="item overview">
                             <!---->
                             <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                         </li>
                     </ul>
-                    <a class="downloadBtn fr hide-lg textUpperCase" href="{{site.download}}">Download Free Trial</a>
+                    <!-- <a class="downloadBtn fr hide-lg textUpperCase" href="{{site.download}}">Download Free Trial</a> -->
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                             </li>
                             <li class="item overview">
                                 <!---->
-                                <a class="textUpperCase" href="{{site.frontPageFolder}}release-notes.html">Release Notes</a>
+                                <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
                             </li>
                             <li class="item overview">
                                 <!---->
