--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -19,17 +19,14 @@
                 <div class="col-xs-12">
                     <ul class="menuList">
                         <!---->
-                        <li class="title"><a class="orangeLink" href="{{site.overview}}">Dynamsoft Document Normalizer</a></li>
-                        <li class="item overview">
-                            <!---->
+                        <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li>
+                        <!-- <li class="item overview">
                             <a class="textUpperCase" href="{{site.overview}}">Overview</a>
                         </li>
                         <li class="item overview">
-                            <!---->
                             <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
-                        </li>
+                        </li> -->
                         <li class="item overview">
-                            <!---->
                             <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                         </li>
                     </ul>
@@ -51,17 +48,14 @@
                     <div class="col-xs-12">
                         <ul class="menuList">
                             <!---->
-                            <li class="title"><a class="orangeLink" href="{{site.overview}}">Dynamsoft Document Normalizer</a></li>
-                            <li class="item overview">
-                                <!---->
+                            <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li>
+                            <!-- <li class="item overview">
                                 <a class="textUpperCase" href="{{site.overview}}">Overview</a>
                             </li>
                             <li class="item overview">
-                                <!---->
                                 <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
-                            </li>
+                            </li> -->
                             <li class="item overview">
-                                <!---->
                                 <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                             </li>
                         </ul>
