--- a/_includes/sidelist-parameters/parameters-reference.html
+++ b/_includes/sidelist-parameters/parameters-reference.html
@@ -13,6 +13,7 @@
         <li><a href="{{ site.parameters_reference }}interior-angle-range-array.html" class="otherLinkColour">InteriorAngleRangeArray</a></li>
         <li><a href="{{ site.parameters_reference }}line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
         <li><a href="{{ site.parameters_reference }}max-thread-count.html" class="otherLinkColour">MaxThreadCount</a></li>
+        <li><a href="{{ site.parameters_reference }}max-total-image-dimension.html" class="otherLinkColour">MaxTotalImageDimension</a></li>
         <li><a href="{{ site.parameters_reference }}page-size.html" class="otherLinkColour">PageSize</a></li>
         <li><a href="{{ site.parameters_reference }}quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
         <li><a href="{{ site.parameters_reference }}scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
