update parameter reference menu

--- a/_includes/sidelist-parameters/parameters-reference.html
+++ b/_includes/sidelist-parameters/parameters-reference.html
@@ -16,6 +16,7 @@
         <li><a href="{{ site.parameters_reference }}max-total-image-dimension.html" class="otherLinkColour">MaxTotalImageDimension</a></li>
         <li><a href="{{ site.parameters_reference }}page-size.html" class="otherLinkColour">PageSize</a></li>
         <li><a href="{{ site.parameters_reference }}quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
+        <li><a href="{{ site.parameters_reference }}region-predetection-modes.html" class="otherLinkColour">RegionPredetectionModes</a></li>
         <li><a href="{{ site.parameters_reference }}scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
         <li><a href="{{ site.parameters_reference }}text-filter-modes.html" class="otherLinkColour">TextFilterModes</a></li>
         <li><a href="{{ site.parameters_reference }}texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
