restructure enum pages

--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -22,7 +22,11 @@
                         <li><a href="{{ site.c_api }}quadrilateral.html" class="otherLinkColour">Quadrilateral</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.enumerations }}?src=c" class="otherLinkColour">Enumerations</a></li>
+                <li><a>Enumerations</a>
+                    <ul>
+                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=c" class="otherLinkColour">ImagePixelFormat</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="{{ site.c_release_notes }}" class="otherLinkColour">Release Notes</a>
