--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -23,7 +23,11 @@
                         <li><a href="{{ site.cpp_api }}quadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.enumerations }}?src=cpp" class="otherLinkColour">Enumerations</a></li>
+                <li><a>Enumerations</a>
+                    <ul>
+                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=cpp" class="otherLinkColour">ImagePixelFormat</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="{{ site.cpp_release_notes }}" class="otherLinkColour">Release Notes</a>
