--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -33,6 +33,11 @@
                         <li><a href="{{ site.ios_api }}license-verification-listener.html" class="otherLinkColour">LicenseVerificationListener</a></li>
                     </ul>
                 </li>
+                <li><a>Enumerations</a>
+                    <ul>
+                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=ios" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="{{ site.ios_release_notes }}" class="otherLinkColour">Release Notes</a>
