--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -36,7 +36,7 @@
                 </li>
                 <li><a>Enumerations</a>
                     <ul>
-                        <li><a href="{{ site.enumerations }}image-pixel-format.html" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=android" class="otherLinkColour">EnumImagePixelFormat</a></li>
                     </ul>
                 </li>
             </ul>
