--- a/_includes/sidelist-introduction.html
+++ b/_includes/sidelist-introduction.html
@@ -1,2 +1,2 @@
-<li><a href="{{ site.introduction }}overview/" class="otherLinkColour">Introduction</a>
+<li><a href="{{ site.introduction }}" class="otherLinkColour">Introduction</a>
 </li>
