--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -27,6 +27,23 @@
                         <li><a href="{{ site.ios_api }}normalized-image-result.html" class="otherLinkColour">iNormalizedImageResult</a></li>
                     </ul>
                 </li>
+                <li><a href="{{ site.android_api }}camera-enhancer/index.html" class="otherLinkColour">Camera Enhancer Library</a>
+                    <ul>
+                        <li><a href="{{ site.android_api }}camera-enhancer/camera-enhancer.html" class="otherLinkColour">CameraEnhancer</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/dcecameraview.html" class="otherLinkColour">DCECameraView</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/dceimageeditorview.html" class="otherLinkColour">DCEImageEditorView</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/dceframe.html" class="otherLinkColour">DCEFrame</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/dcedrawinglayer.html" class="otherLinkColour">DCEDrawingLayer</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem.html" class="otherLinkColour">DrawingItem</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-quad.html" class="otherLinkColour">QuadDrawingItem</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-rect.html" class="otherLinkColour">RectDrawingItem</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-text.html" class="otherLinkColour">TextDrawingItem</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingstyle.html" class="otherLinkColour">DrawingStyle</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/drawingstylemanager.html" class="otherLinkColour">DrawingStyleManager</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/protocol-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
+                        <li><a href="{{ site.android_api }}camera-enhancer/region-definition.html" class="otherLinkColour">iRegionDefinition</a></li>
+                    </ul>
+                </li>
                 <li><a href="{{ site.ios_api }}interface-index.html" class="otherLinkColour">Interfaces</a>
                     <ul>
                         <li><a href="{{ site.ios_api }}detect-result-listener.html" class="otherLinkColour">DetectResultListener</a></li>
