Added dce index

--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -25,6 +25,7 @@
                         <li><a href="{{ site.ios_api }}license-manager.html" class="otherLinkColour">DynamsoftLicenseManager</a></li>
                         <li><a href="{{ site.ios_api }}detected-quad-result.html" class="otherLinkColour">iDetectedQuadResult</a></li>
                         <li><a href="{{ site.ios_api }}normalized-image-result.html" class="otherLinkColour">iNormalizedImageResult</a></li>
+                        <li><a href="{{ site.ios_api }}camera-enhancer/region-definition.html" class="otherLinkColour">iRegionDefinition</a></li>
                     </ul>
                 </li>
                 <li><a href="{{ site.android_api }}camera-enhancer/index.html" class="otherLinkColour">Camera Enhancer Library</a>
@@ -41,7 +42,6 @@
                         <li><a href="{{ site.android_api }}camera-enhancer/drawingstyle.html" class="otherLinkColour">DrawingStyle</a></li>
                         <li><a href="{{ site.android_api }}camera-enhancer/drawingstylemanager.html" class="otherLinkColour">DrawingStyleManager</a></li>
                         <li><a href="{{ site.android_api }}camera-enhancer/protocol-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/region-definition.html" class="otherLinkColour">iRegionDefinition</a></li>
                     </ul>
                 </li>
                 <li><a href="{{ site.ios_api }}interface-index.html" class="otherLinkColour">Interfaces</a>
