--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -1,4 +1,4 @@
-<li><a href="{{ site.c }}" class="otherLinkColour">C Language</a>
+<li><a href="{{ site.c }}" class="otherLinkColour">C</a>
     <ul>
         <li><a href="{{ site.c }}user-guide/getting-started.html" class="otherLinkColour">User Guide</a></li>
         <li><a href="{{ site.c_api }}" class="otherLinkColour">API Reference</a>
