--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -31,19 +31,30 @@
                 <li><a href="{{ site.android_api }}camera-enhancer/index.html" class="otherLinkColour">Camera Enhancer Library</a>
                     <ul>
                         <li><a href="{{ site.android_api }}camera-enhancer/camera-enhancer.html" class="otherLinkColour">CameraEnhancer</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/dcecameraview.html" class="otherLinkColour">DCECameraView</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/dceimageeditorview.html" class="otherLinkColour">DCEImageEditorView</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/dceframe.html" class="otherLinkColour">DCEFrame</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/dcedrawinglayer.html" class="otherLinkColour">DCEDrawingLayer</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem.html" class="otherLinkColour">DrawingItem</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-quad.html" class="otherLinkColour">QuadDrawingItem</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-rect.html" class="otherLinkColour">RectDrawingItem</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-text.html" class="otherLinkColour">TextDrawingItem</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingstyle.html" class="otherLinkColour">DrawingStyle</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/drawingstylemanager.html" class="otherLinkColour">DrawingStyleManager</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/camera-enhancer-exception.html" class="otherLinkColour">CameraEnhancerException</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/interface-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
-                        <li><a href="{{ site.android_api }}camera-enhancer/region-definition.html" class="otherLinkColour">RegionDefinition</a></li>
+                        <li><a style="cursor:pointer;color:#3c3c3c">UI Classes</a>
+                            <ul>
+                                <li><a href="{{ site.android_api }}camera-enhancer/dcecameraview.html" class="otherLinkColour">DCECameraView</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/dceimageeditorview.html" class="otherLinkColour">DCEImageEditorView</a></li>
+                            </ul>
+                        </li>
+                        <li><a style="cursor:pointer;color:#3c3c3c">Auxiliary Classes</a>
+                            <ul>
+                                <li><a href="{{ site.android_api }}camera-enhancer/dceframe.html" class="otherLinkColour">DCEFrame</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/dcedrawinglayer.html" class="otherLinkColour">DCEDrawingLayer</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingitem.html" class="otherLinkColour">DrawingItem</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-quad.html" class="otherLinkColour">QuadDrawingItem</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-rect.html" class="otherLinkColour">RectDrawingItem</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingitem-text.html" class="otherLinkColour">TextDrawingItem</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingstyle.html" class="otherLinkColour">DrawingStyle</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/drawingstylemanager.html" class="otherLinkColour">DrawingStyleManager</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/region-definition.html" class="otherLinkColour">RegionDefinition</a></li>
+                            </ul>
+                        </li>
+                        <li><a style="cursor:pointer;color:#3c3c3c">Protocol</a>
+                            <ul>
+                                <li><a href="{{ site.android_api }}camera-enhancer/interface-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="{{ site.android_api }}interface-index.html" class="otherLinkColour">Interfaces</a>
