--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -56,7 +56,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="{{ site.ios_api }}interface-index.html" class="otherLinkColour">Interfaces</a>
+                <li><a href="{{ site.ios_api }}interface-index.html" class="otherLinkColour">Protocol</a>
                     <ul>
                         <li><a href="{{ site.ios_api }}detect-result-listener.html" class="otherLinkColour">DetectResultListener</a></li>
                         <li><a href="{{ site.ios_api }}license-verification-listener.html" class="otherLinkColour">LicenseVerificationListener</a></li>
