--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -54,6 +54,16 @@
                                 <li><a href="{{ site.ios_api }}camera-enhancer/protocol-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
                             </ul>
                         </li>
+                        <li><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
+                            <ul>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-enhancer-features.html" class="otherLinkColour">EnumEnhancerFeatures</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-frame-quality.html" class="otherLinkColour">EnumFrameQuality</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-camera-state.html" class="otherLinkColour">EnumCameraState</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-resolution.html" class="otherLinkColour">EnumResolution</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-drawing-item-state.html" class="otherLinkColour">EnumDrawingItemState</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-drawing-item-media-type.html" class="otherLinkColour">EnumDrawingItemMeidaType</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="{{ site.ios_api }}interface-index.html" class="otherLinkColour">Protocol</a>
