--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -75,6 +75,7 @@
                 <li><a>Enumerations</a>
                     <ul>
                         <li><a href="{{ site.enumerations }}image-pixel-format.html?src=ios" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}error-code.html?src=ios" class="otherLinkColour">EnumDMErrorCode</a></li>
                     </ul>
                 </li>
             </ul>
