--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -76,6 +76,7 @@
                 <li><a>Enumerations</a>
                     <ul>
                         <li><a href="{{ site.enumerations }}image-pixel-format.html?src=android" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}error-code.html?src=android" class="otherLinkColour">EnumDMErrorCode</a></li>
                     </ul>
                 </li>
             </ul>
