--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -37,7 +37,7 @@
         <div class="container mobileProductMenu">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="productLogo"><i class="dcv-logo"></i> <i class="icon-orange-angle"></i></div>
+                    <div class="productLogo"><i class="ddn-logo"></i> <i class="icon-orange-angle"></i></div>
                     <div id="dcvCurrentPage" class="fontOswald fr currentPage">Resource Base</div>
                 </div>
             </div>
