Fixed bugs and added a new page

--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -30,7 +30,7 @@
                 <li><a href="{{ site.ios_api }}camera-enhancer/index.html" class="otherLinkColour">Camera Enhancer Library</a>
                     <ul>
                         <li><a href="{{ site.ios_api }}camera-enhancer/camera-enhancer.html" class="otherLinkColour">CameraEnhancer</a></li>
-                        <li><a style="cursor:pointer;color:#3c3c3c">UI Classes</a>
+                        <li><a href="{{ site.ios_api }}camera-enhancer/guide-of-drawing-items.html" class="otherLinkColour">UI Classes</a>
                             <ul>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/dcecameraview.html" class="otherLinkColour">DCECameraView</a></li>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/dceimageeditorview.html" class="otherLinkColour">DCEImageEditorView</a></li>
