Updating DCE API documents

--- a/_includes/sidelist-parameters.html
+++ b/_includes/sidelist-parameters.html
@@ -1,3 +1,4 @@
+<li class="category">PARAMETERS</li>
 <li><a href="{{ site.parameters }}" class="otherLinkColour">Parameters</a>
     <ul>
         <li><a href="{{ site.parameters }}parameter-organization-structure.html" class="otherLinkColour">Parameter Organization Structure</a></li>
