--- a/_includes/sidelist-programming.html
+++ b/_includes/sidelist-programming.html
@@ -1,8 +1,13 @@
-<li><a href="{{ site.programming }}" class="otherLinkColour">Programming</a>
+<!-- <li><a href="{{ site.programming }}" class="otherLinkColour">Programming</a>
     <ul>
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-android.html" -%}
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-ios.html" -%}
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-c.html" -%}
         {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-cpp.html" -%}
     </ul>
-</li>
+</li> -->
+<li class="category">DEVELOPMENT</li>
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-android.html" -%}
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-ios.html" -%}
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-c.html" -%}
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-programming/programming-cpp.html" -%}
