--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -2,7 +2,10 @@
 <html lang="en-US">
 
 {%- include head.html -%}
-
+{%- assign noTitleIndex = "" -%}
+{%- if page.noTitleIndex or page.url contains 'release-notes' -%}
+    {%- assign noTitleIndex = "noTitleIndex" -%}
+{%- endif -%}
 <body>
     <div class="headWrapper">
         {%- include page_header.html -%}
@@ -16,21 +19,22 @@
                     <div class="docSearchPart" style="margin-top: 30px;">
                         <input id="txtSearch" class="search" type="text">
                     </div>
-                    <ul class="mainPage" id="fullTreeMenuListContainer" name="listLevel1">
-                        
-                    </ul>
+                    <div class="mainPage">
+                        <ul id="fullTreeMenuListContainer" name="listLevel1">
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="docContainer col-xs-12 col-md-9">
                 <div id="docHead" class = "head row hide-xs hide-sm">
                     {%- include main-page-head.html -%}
                 </div>
-                <div class="main row">
-                    <div class="content markdown-body headCounter col-xs-12 col-md-12 col-lg-9 col-xl-10" style="margin-bottom: 20px;">
+                <div class="main row showRightSideMenu" id="articleContent" data-needh3="{{page.needGenerateH3Content}}">
+                    <div class="content markdown-body headCounter {{noTitleIndex}} col-xs-12 col-md-12 col-lg-9 col-xl-10 showRightSideMenu" style="margin-bottom: 20px;">
                         {{ content }}
                         
                     </div>
-                    <div class="rightSideMenu col-xs-12 col-md-12 col-lg-3 col-xl-2  hide-md hide-sm hide-xs">
+                    <div class="rightSideMenu col-xs-12 col-md-12 col-lg-3 col-xl-2  hide-md hide-sm hide-xs showRightSideMenu">
                         <div id="compatibleInfo">
                             <p>This page is compatible for:</p>
                             <p class="compatibleCurVersion">Version 1.0</p>
@@ -45,6 +49,11 @@
                         <p class="fontOswald" style="color: #306877;"> In this article: </p>
                         <div id="AutoGenerateSidebar"></div>
                         {%- endif -%}
+                    </div>
+                </div>
+                <div class="main row" style="display: none; background: #f5f5f5;" id="loadingContent">
+                    <div class="loading" id="loadingLogin">
+                        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
                     </div>
                 </div>
             </div>
