--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -12,7 +12,7 @@
     </div>
     {%- include ddnNav.html -%}
     <div class="sideBarIcon"><i class="fa fa-list" style="margin-right: 5px;"></i> Table of contents</div>
-    <div class="container">
+    <div class="container" id="categoryMenuTree">
         <div class="row">
             <div class="sideBar col-xs-12 col-md-3 hide-xs hide-sm">
                 <div id="sideBarCnt">
